tests/Jroc.Test262.Tests/built-ins/NativeErrors/JavaScript/SyntaxError/constructor.js
assert.sameValue(typeof SyntaxError, 'function', 'typeof SyntaxError is "function"');

